--- a/generation.yaml
+++ b/generation.yaml
@@ -1,4 +1,4 @@
-name: Run Inference
+name: Run Inferencing
 description: |
   Loads Gemma3Model, generates text for multiple input prompts, and writes generation outputs to a JSON file.
   Accepts test_data_json as either (A) a JSON string (one-line) or (B) a path to a JSON file.
@@ -24,7 +24,7 @@ inputs:
     description: Maximum number of tokens to generate
   - name: temperature
     type: Float
-    default: "1.0"
+    default: "0.9"
     description: Sampling temperature (higher = more random, lower = more deterministic)
   - name: top_k
     type: Integer
@@ -42,11 +42,13 @@ implementation:
       - -c
       - |
         set -e
+        # install runtime deps needed for generation (no rouge/sacrebleu)
         pip install tokenizers torch || true
-
-        # write the python script to a file using a single-quoted here-doc (avoids quoting issues)
-        cat > /tmp/infer.py <<'PY'
-        #!/usr/bin/env python3
+        exec "$0" "$@"
+      - python3
+      - -u
+      - -c
+      - |
         import argparse, importlib.util, json, os, sys, shutil
         import torch
         from tokenizers import Tokenizer
@@ -59,10 +61,10 @@ implementation:
                 raise ValueError("model_py must be a file or a directory containing one .py file")
             py_files = [os.path.join(path_or_dir, f) for f in os.listdir(path_or_dir) if f.endswith(".py")]
             if not py_files:
-                raise ValueError("No .py files found in directory: " + path_or_dir)
+                raise FileNotFoundError("No .py files found in directory: " + path_or_dir)
             if len(py_files) > 1:
-                # be explicit so the user knows what's wrong
-                raise ValueError("Multiple .py files found in directory: " + path_or_dir + " — expected exactly one.")
+                # fallback to first but inform user
+                sys.stderr.write("WARNING: multiple .py files found in model_py directory; using first: " + py_files[0] + "\n")
             return py_files[0]
 
         def load_module_from_path(py_path, mod_name="gemma3_model"):
@@ -120,15 +122,13 @@ implementation:
         bos_id = token_id_any(tok, ["<s>", "<bos>"])
         eos_id = token_id_any(tok, ["</s>", "<eos>"])
 
-        # load model config
+        # load model config (keep dtype as portable string)
         try:
             with open(args.model_config, "r", encoding="utf-8") as f:
                 cfg = json.load(f)
         except Exception as e:
             sys.stderr.write("ERROR: Failed to read model_config: " + str(e) + "\n")
             sys.exit(4)
-
-        # ensure dtype in cfg; keep as string for portability
         cfg["dtype"] = "float16" if model_dtype == torch.float16 else "float32"
 
         # load model code
@@ -199,28 +199,40 @@ implementation:
                 sys.exit(8)
 
         if not isinstance(test_data, list):
-            sys.stderr.write("ERROR: test_data must be a JSON list of prompt strings.\n")
+            sys.stderr.write("ERROR: test_data must be a JSON list of [input, expected_output] pairs.\n")
             sys.exit(9)
 
         results = []
-        for input_text in test_data:
+        for idx, pair in enumerate(test_data):
+            # expect each item to be a 2-element sequence: [input_text, expected_output]
+            try:
+                input_text, expected_output = pair
+            except Exception:
+                sys.stderr.write(f"ERROR: test_data element at index {idx} is not a 2-element pair: {pair}\n")
+                input_text = str(pair)
+                expected_output = ""
             try:
                 generated_output = generate_text(input_text, args.max_new_tokens, args.temperature, args.top_k)
             except Exception as e:
                 generated_output = "[ERROR during generation: " + str(e) + "]"
-            results.append({"inference_input": input_text, "inference_output": generated_output})
 
-        # save outputs
+            result = {
+                "inference_input": input_text,
+                "ground_truth": expected_output,
+                "inference_output": generated_output
+            }
+            results.append(result)
+
+            # short runtime log
+            print(f"[{idx}] Generated (preview): {generated_output[:200].replace(chr(10),' ')}")
+
+        # write results (contains ground_truth but no scores)
         try:
             with open(args.inference_results, "w", encoding="utf-8") as f:
                 json.dump(results, f, indent=2, ensure_ascii=False)
         except Exception as e:
             sys.stderr.write("ERROR: Failed to write inference_results: " + str(e) + "\n")
             sys.exit(10)
-        PY
-
-        # execute the script with the same args provided by kfp (exec replaces the shell process)
-        exec python3 /tmp/infer.py "$@"
     args:
       - --tokenizer_json
       - {inputPath: tokenizer_json}
